Release v0.10.0 run history
